Solve overflow problem

--- a/html-css/sign-up-form/css/style.css
+++ b/html-css/sign-up-form/css/style.css
@@ -91,3 +91,8 @@ a {
 	grid-template-columns: repeat(2, 1fr);
 	grid-auto-flow: column;
 }
+
+
+.login-field {
+	width: 50%;
+}
